test/fail_compilation/imports/cstuff1.c
// check the expression parser

/********************************/
// https://issues.dlang.org/show_bug.cgi?id=21962
enum empty_enum { };
enum { };
